--- a/locales/en.json
+++ b/locales/en.json
@@ -15,7 +15,7 @@
         "metaDesc": "I'm a young media engineer, passionate about web and technology. Visit my portfolio to know more about me and my work.",
         "portraitAlt": "Robin's portrait",
         "catchPhrase1": "I'm a young media engineer, passionate about web and technology.",
-        "catchPhrase2": "My background as a computer scientist taught me a lot of technical knowledges and brought me some experience in the corporate world. But I wanted to put my terminal aside for a moment to learn beyond pure technic. This led me to become a web developer with a large range of side skills, like UX, communication, marketing, content creation and more.",
+        "catchPhrase2": "My studies in media engineering have not only allowed me to develop up-to-date technical skills, but also to widen my skills in many media-related fields, such as communication, digital marketing, UX/UI, management or content creation. My particular interest in web development has pushed me, and pushes me, to continuously inform myself about current and future technologies, in order to progress and learn a bit more every day.",
         "aboutMe": "About me",
         "iLiveIn": "I live in",
         "whereILive": "Romandy Switzerland",
