--- a/locales/fr.json
+++ b/locales/fr.json
@@ -15,7 +15,7 @@
         "metaDesc": "Je suis un jeune ingénieur des médias, passionné par le web et la technologie. Jetez un œil à mon portfolio pour en savoir plus sur moi et mon travail",
         "portraitAlt": "Portrait de Robin",
         "catchPhrase1": "Je suis un jeune ingénieur des médias, passionné par le web et la technologie.",
-        "catchPhrase2": "Ma formation d'informaticien m'a apporté un grand nombre de compétences techniques, ainsi que de l'expérience professionnelle. J'ai ensuite voulu mettre de côté mon terminal afin d'apprendre au-delà de la technique pure. Cela m'a amené à devenir un développeur web très polyvalent, ayant des compétences en UX, en communication, en marketing, en création de contenu et bien plus.",
+        "catchPhrase2": "Mes études en ingénierie des médias m'ont non seulement permis d'acquérir des savoir-faire techniques au gout du jour, mais également d'élargir mes compétences aux nombreux domaines relatifs aux médias, comme la communication, le marketing digital, l'UX/UI,  le management ou la création de contenu. Mon attrait particulier pour le développement web m'a poussé, et me pousse, à m'informer continuellement sur les technologies actuelles et à venir, afin de progresser et d'apprendre un peu plus chaque jour.",
         "aboutMe": "À propos de moi",
         "iLiveIn": "Je vis en",
         "whereILive": "Suisse romande",
