--- a/locales/en.json
+++ b/locales/en.json
@@ -26,7 +26,7 @@
         "educationContent": "IT scientist CFC & media engineering bachelor's degree",
         "myFavorites": "My favorite ...",
         "myFavoritesContent": "Movie: Léon, TV show: Mr Robot, Band: Moon Hooch, Video game: Skyrim, Sport: bloc climbing",
-        "wannabe": "Wannabe",
+        "wannabe": "Casual",
         "wannabeContent": "photographer, climber, handcrafter, moviegoer",
         "skills": "Skills",
         "other": "Other",
